# smart-attendance

./: .env.example  .gitignore  ENV_CONTRACT.md  README.md  docker-compose.yml  lint-check.sh
.github/workflows/: README.md  deploy.yaml  ssh.yaml
app/: .dockerignore  README.md  docker-compose.yml
app/backend/: .env.example  README.md  app.py  crud.py  database.py  models.py  pyproject.toml  requirements.txt  schemas.py
app/frontend/: .eslintrc.json  index.html  package-lock.json  package.json
app/frontend/src/: qrcode.react.d.ts  types.ts
backend/: .dockerignore  Dockerfile  app.py  crud.py  database.py  models.py  requirements.txt  schemas.py  test.db  test_app.py
frontend/: .eslintignore  .eslintrc.json  Dockerfile  eslint.config.js  nginx.conf  package-lock.json  package.json  tsconfig.json
frontend/src/: App.tsx  styles.css
frontend/src/pages/: StudentDashboard.css  StudentDashboard.tsx  TestProbe.tsx
scripts/: ci_api_mock_test.sh  ci_delivery_validation.sh  target_rollback.sh
tests/: mock_payloads.json
